--- a/m1x.html
+++ b/m1x.html
@@ -73,7 +73,7 @@
 	
 <h6>
 	Please check out audio book for more details
-	<div id="station-carousel" data-id="8470274950"></div><script src="https://radio.witlingo.com/js/embed/carousel"></script>
+	<!--div id="station-carousel" data-id="8470274950"></div><script src="https://radio.witlingo.com/js/embed/carousel"></script>-->
 	</h6>
           <p></p>
           <hr>
@@ -85,7 +85,7 @@
 	      <br />
 	      
           <h3>Please post your auido views about it. </h2>
-		<div id="witlingo-radio-recorder" data-id="8470274950"></div><script src="https://radio.witlingo.com/js/embed/recorder"></script>
+		<!--<div id="witlingo-radio-recorder" data-id="8470274950"></div><script src="https://radio.witlingo.com/js/embed/recorder"></script>-->
 
 
 
